sfdx-source/LabsActionPlans/main/default/objects/Action_Plans_Settings__c/Action_Plans_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>The basic settings for the Action Plans App</description>
    <label>Action Plans Settings</label>
</CustomObject>