sfdx-source/LabsActionPlans/main/default/objects/Action_Plans_Settings__c/fields/Action_Plans_Business_Hours_ID__c.field-meta.xml
<CustomField>
	<fullName>Action_Plans_Business_Hours_ID__c</fullName>
	<description>Reserved for future functionality</description>
	<inlineHelpText>ID of the Business Hours that should be used for setting Task Due Dates (if that checkbox is checked)</inlineHelpText>
	<label>Action Plans Business Hours ID</label>
	<length>18</length>
	<type>Text</type>
</CustomField>