sfdx-source/LabsActionPlans/main/default/objects/Action_Plans_Settings__c/fields/Chatter_Object_Brag__c.field-meta.xml
<CustomField>
    <fullName>Chatter_Object_Brag__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Enable Chatter FeedItem post when a New Action Plan for a record is created.</description>
    <inlineHelpText>Enable Chatter Object Brag when a New Action Plan for an object is created.</inlineHelpText>
    <label>Enable Chatter Post</label>
    <type>Checkbox</type>
</CustomField>