sfdx-source/LabsActionPlans/main/default/objects/Action_Plans_Settings__c/fields/Default_Object_on_Lead_Conversion__c.field-meta.xml
<CustomField>
	<fullName>Default_Object_on_Lead_Conversion__c</fullName>
	<defaultValue>&quot;Contact&quot;</defaultValue>
	<description>Should be Account, Opportunity, or Contact.</description>
	<inlineHelpText>When a Lead is converted, move its Action Plans to this object.</inlineHelpText>
	<label>Default Object on Lead Conversion</label>
	<length>255</length>
	<required>true</required>
	<type>Text</type>
</CustomField>