sfdx-source/LabsActionPlans/main/default/objects/Action_Plans_Settings__c/fields/Unassigned_Task_Assigned_to_Owner__c.field-meta.xml
<CustomField>
    <fullName>Unassigned_Task_Assigned_to_Owner__c</fullName>
    <defaultValue>true</defaultValue>
    <description>This field defaults to TRUE because we assume that no matter who triggers the invoked Action Plan creation, the tasks will most likely be assigned to the owner of the parent record.</description>
    <inlineHelpText>If the Task is Unassigned in the Template, and this is Checked, the assigned User for the Task is the Owner of the Record. If this setting is unchecked, the assigned User for the Task is the Current User.</inlineHelpText>
    <label>Unassigned Task Assigned to Record Owner</label>
    <type>Checkbox</type>
</CustomField>